[gd_scene load_steps=12 format=2]

[ext_resource path="res://gameplay/bosses/BossAra.gd" type="Script" id=1]
[ext_resource path="res://models/characters/AraBandicoot.tscn" type="PackedScene" id=2]
[ext_resource path="res://sounds/bosses/ara/laught.wav" type="AudioStream" id=10]
[ext_resource path="res://sounds/bosses/ara/talk_opsie.wav" type="AudioStream" id=11]
[ext_resource path="res://sounds/bosses/ara/ara_hit2.wav" type="AudioStream" id=12]
[ext_resource path="res://sounds/bosses/ara/ara_attack2.wav" type="AudioStream" id=13]
[ext_resource path="res://sounds/bosses/ara/ara_hit.wav" type="AudioStream" id=14]
[ext_resource path="res://sounds/bosses/ara/ara_talk_start.wav" type="AudioStream" id=19]
[ext_resource path="res://sounds/bosses/boss_hit.wav" type="AudioStream" id=21]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.410746, 0.841847, 0.408727 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.644476, 1.75816, 0.833663 )

[node name="obj_boss_ara" type="KinematicBody"]
script = ExtResource( 1 )

[node name="AraBandicoot" parent="." instance=ExtResource( 2 )]

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.881484, 0 )
shape = SubResource( 1 )

[node name="Rays" type="Spatial" parent="."]

[node name="RayCast" type="RayCast" parent="Rays"]
enabled = true
cast_to = Vector3( 0, -0.1, 0 )
collision_mask = 17

[node name="voice_laught" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 10 )
unit_db = 10.0
unit_size = 5.0
max_distance = 500.0

[node name="voice_yata" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 11 )
unit_db = 10.0
unit_size = 5.0
max_distance = 500.0

[node name="voice_attack" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 13 )
unit_db = 10.0
unit_size = 5.0
max_distance = 500.0

[node name="voice_hit1" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 14 )
unit_db = 10.0
unit_size = 5.0
max_distance = 500.0

[node name="voice_hit2" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 12 )
unit_db = 10.0
unit_size = 5.0
max_distance = 500.0

[node name="voice_start" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 19 )
attenuation_model = 1
unit_db = 10.0
unit_size = 5.0
max_distance = 500.0

[node name="sfx_hit" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 21 )
attenuation_model = 1
unit_db = 10.0
unit_size = 5.0
max_distance = 500.0

[node name="Holding" type="Position3D" parent="."]

[node name="Area" type="Area" parent="."]
monitorable = false
collision_layer = 0
collision_mask = 4096

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.409667 )
shape = SubResource( 2 )
[connection signal="area_entered" from="Area" to="." method="_on_Area_area_entered"]

[editable path="AraBandicoot"]
